--- a/NewGeneUI/NewGene/Widgets/splash.ui
+++ b/NewGeneUI/NewGene/Widgets/splash.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>711</width>
-    <height>787</height>
+    <height>650</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -59,7 +59,7 @@
       <property name="geometry">
        <rect>
         <x>-1</x>
-        <y>659</y>
+        <y>520</y>
         <width>714</width>
         <height>131</height>
        </rect>
@@ -77,7 +77,7 @@
         <x>0</x>
         <y>0</y>
         <width>711</width>
-        <height>661</height>
+        <height>521</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -111,14 +111,14 @@
       <widget class="QLabel" name="label_newgene">
        <property name="geometry">
         <rect>
-         <x>430</x>
-         <y>100</y>
-         <width>151</width>
+         <x>420</x>
+         <y>69</y>
+         <width>171</width>
          <height>41</height>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">#label_newgene {font-family: Verdana; font-size: 28px; color: #040ead; font-weight: bold;}</string>
+        <string notr="true">#label_newgene {font-family: Verdana; font-size: 32px; color: #040ead; font-weight: bold;}</string>
        </property>
        <property name="text">
         <string>NewGene</string>
@@ -128,7 +128,7 @@
        <property name="geometry">
         <rect>
          <x>325</x>
-         <y>167</y>
+         <y>120</y>
          <width>371</width>
          <height>31</height>
         </rect>
@@ -144,7 +144,7 @@
        <property name="geometry">
         <rect>
          <x>350</x>
-         <y>200</y>
+         <y>180</y>
          <width>321</width>
          <height>31</height>
         </rect>
@@ -166,7 +166,7 @@
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">#label_creds {font-family: Verdana; font-size: 12px; color: #003300; font-weight: bold;}</string>
+        <string notr="true">#label_creds {font-family: Verdana; font-size: 12px; color: #001f4c; font-weight: bold;}</string>
        </property>
        <property name="text">
         <string>D. Scott Bennett</string>
@@ -176,7 +176,7 @@
        <property name="geometry">
         <rect>
          <x>530</x>
-         <y>620</y>
+         <y>476</y>
          <width>331</width>
          <height>21</height>
         </rect>
@@ -192,7 +192,7 @@
        <property name="geometry">
         <rect>
          <x>410</x>
-         <y>450</y>
+         <y>390</y>
          <width>171</width>
          <height>21</height>
         </rect>
@@ -219,7 +219,7 @@
          <x>10</x>
          <y>320</y>
          <width>311</width>
-         <height>331</height>
+         <height>191</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayoutWeb">
@@ -283,7 +283,7 @@
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">#label_creds3 {font-family: Verdana; font-size: 12px; color: #042ead; font-weight: bold;}</string>
+        <string notr="true">#label_creds3 {font-family: Verdana; font-size: 12px; color: #001f4c; font-weight: bold;}</string>
        </property>
        <property name="text">
         <string>Paul Poast</string>
@@ -292,14 +292,14 @@
       <widget class="QLabel" name="label_2">
        <property name="geometry">
         <rect>
-         <x>497</x>
-         <y>639</y>
+         <x>502</x>
+         <y>495</y>
          <width>201</width>
          <height>16</height>
         </rect>
        </property>
        <property name="text">
-        <string>Programmed in C++ by: &lt;a href=&quot;http://elance.com/s/daniel347x&quot;&gt;Dan Nissenbaum&lt;/a&gt;</string>
+        <string>Programmed in C++ by &lt;a href=&quot;http://elance.com/s/daniel347x&quot;&gt;Dan Nissenbaum&lt;/a&gt;</string>
        </property>
        <property name="textFormat">
         <enum>Qt::RichText</enum>
