--- a/NewGeneUI/NewGene/Widgets/splash.ui
+++ b/NewGeneUI/NewGene/Widgets/splash.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>711</width>
-    <height>650</height>
+    <height>750</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -59,7 +59,7 @@
       <property name="geometry">
        <rect>
         <x>-1</x>
-        <y>520</y>
+        <y>620</y>
         <width>714</width>
         <height>131</height>
        </rect>
@@ -77,7 +77,7 @@
         <x>0</x>
         <y>0</y>
         <width>711</width>
-        <height>521</height>
+        <height>621</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -112,7 +112,7 @@
        <property name="geometry">
         <rect>
          <x>420</x>
-         <y>69</y>
+         <y>78</y>
          <width>171</width>
          <height>41</height>
         </rect>
@@ -128,13 +128,13 @@
        <property name="geometry">
         <rect>
          <x>325</x>
-         <y>120</y>
+         <y>140</y>
          <width>371</width>
          <height>31</height>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">#label_cs {font-family: Verdana; font-size: 16px; color: #040ead; font-weight: bold;}</string>
+        <string notr="true">#label_cs {font-family: Verdana; font-size: 16px; color: #111111; font-weight: bold;}</string>
        </property>
        <property name="text">
         <string>Cross Sectional Time Series Data Manager</string>
@@ -144,13 +144,13 @@
        <property name="geometry">
         <rect>
          <x>350</x>
-         <y>180</y>
+         <y>177</y>
          <width>321</width>
          <height>31</height>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">#label_dm {font-family: Verdana; font-size: 14px; color: #444eed; font-weight: bold; font-style: italic;}</string>
+        <string notr="true">#label_dm {font-family: Verdana; font-size: 14px; color: #24066a; font-weight: bold; font-style: italic;}</string>
        </property>
        <property name="text">
         <string>Data Management for the Social Sciences</string>
@@ -160,7 +160,7 @@
        <property name="geometry">
         <rect>
          <x>331</x>
-         <y>272</y>
+         <y>322</y>
          <width>111</width>
          <height>31</height>
         </rect>
@@ -176,7 +176,7 @@
        <property name="geometry">
         <rect>
          <x>530</x>
-         <y>476</y>
+         <y>577</y>
          <width>331</width>
          <height>21</height>
         </rect>
@@ -191,14 +191,14 @@
       <widget class="QLabel" name="label_newgenewebsite">
        <property name="geometry">
         <rect>
-         <x>410</x>
-         <y>390</y>
-         <width>171</width>
+         <x>548</x>
+         <y>556</y>
+         <width>150</width>
          <height>21</height>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">#label_newgenewebsite {font-size: 18px; font-weight: bold;}</string>
+        <string notr="true">#label_newgenewebsite {font-size: 16px; font-weight: bold;}</string>
        </property>
        <property name="text">
         <string>&lt;a href=&quot;http://www.newgenesoftware.org/&quot;&gt;NewGene website&lt;/a&gt;</string>
@@ -219,7 +219,7 @@
          <x>10</x>
          <y>320</y>
          <width>311</width>
-         <height>191</height>
+         <height>291</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayoutWeb">
@@ -261,7 +261,7 @@
        <property name="geometry">
         <rect>
          <x>603</x>
-         <y>289</y>
+         <y>410</y>
          <width>91</width>
          <height>31</height>
         </rect>
@@ -277,7 +277,7 @@
        <property name="geometry">
         <rect>
          <x>481</x>
-         <y>280</y>
+         <y>370</y>
          <width>71</width>
          <height>31</height>
         </rect>
@@ -292,14 +292,14 @@
       <widget class="QLabel" name="label_2">
        <property name="geometry">
         <rect>
-         <x>502</x>
-         <y>495</y>
-         <width>201</width>
+         <x>442</x>
+         <y>596</y>
+         <width>260</width>
          <height>16</height>
         </rect>
        </property>
        <property name="text">
-        <string>Programmed in C++ by &lt;a href=&quot;http://elance.com/s/daniel347x&quot;&gt;Dan Nissenbaum&lt;/a&gt;</string>
+        <string>NewGene is programmed in C++ by &lt;a href=&quot;http://elance.com/s/daniel347x&quot;&gt;Dan Nissenbaum&lt;/a&gt;</string>
        </property>
        <property name="textFormat">
         <enum>Qt::RichText</enum>
