--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/optionsbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/optionsbox.ui
@@ -225,7 +225,7 @@
         <item>
          <widget class="QCheckBox" name="mergeIdenticalRows">
           <property name="text">
-           <string>Merge identical adjacent output rows
+           <string>Consolidate identical adjacent output rows
 (recommended except for exact statistical analysis)</string>
           </property>
          </widget>
