--- a/NewGeneUI/NewGene/Widgets/ManageInput/VGs/newgenemanagevgs.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/VGs/newgenemanagevgs.ui
@@ -86,6 +86,13 @@
              </widget>
             </item>
             <item>
+             <widget class="QPushButton" name="pushButton_rename_vg">
+              <property name="text">
+               <string> Change selected Variable Group's description  </string>
+              </property>
+             </widget>
+            </item>
+            <item>
              <spacer name="verticalSpacer">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
