Fix bug in which selecting VG or UOA in the Manage pane sometimes caused two list items to be selected simultaneously, and to overlap, even though single-selection mode is set for the list.

--- a/NewGeneUI/NewGene/Widgets/ManageInput/UOAs/newgenemanageuoas.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/UOAs/newgenemanageuoas.ui
@@ -56,8 +56,20 @@
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="sizeAdjustPolicy">
+            <enum>QAbstractScrollArea::AdjustToContents</enum>
+           </property>
            <property name="alternatingRowColors">
             <bool>true</bool>
+           </property>
+           <property name="selectionBehavior">
+            <enum>QAbstractItemView::SelectRows</enum>
+           </property>
+           <property name="resizeMode">
+            <enum>QListView::Adjust</enum>
+           </property>
+           <property name="spacing">
+            <number>5</number>
            </property>
           </widget>
          </item>
