Selected VGs and UOAs in the Manage panes now have dark text so yoy can see it.

--- a/NewGeneUI/NewGene/Widgets/ManageInput/VGs/newgenemanagevgs.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/VGs/newgenemanagevgs.ui
@@ -50,6 +50,9 @@
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="styleSheet">
+            <string notr="true">QListView {selection-color: black;}</string>
+           </property>
            <property name="sizeAdjustPolicy">
             <enum>QAbstractScrollArea::AdjustToContents</enum>
            </property>
