Improve "Set description for selected variable group" button text and modal dialog default text

--- a/NewGeneUI/NewGene/Widgets/ManageInput/VGs/newgenemanagevgs.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/VGs/newgenemanagevgs.ui
@@ -103,7 +103,7 @@
             <item>
              <widget class="QPushButton" name="pushButton_rename_vg">
               <property name="text">
-               <string> Change selected Variable Group's description  </string>
+               <string> Set description for selected Variable Group </string>
               </property>
              </widget>
             </item>
