--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>427</width>
-    <height>82</height>
+    <width>491</width>
+    <height>80</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,8 +18,8 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>0</width>
-    <height>35</height>
+    <width>491</width>
+    <height>80</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -32,18 +32,6 @@
    <enum>QFrame::Raised</enum>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
    <item>
     <widget class="QScrollArea" name="scrollArea">
      <property name="sizePolicy">
@@ -72,8 +60,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>425</width>
-        <height>80</height>
+        <width>471</width>
+        <height>60</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -88,17 +76,24 @@
       <widget class="QLabel" name="emptyKadsLabel">
        <property name="geometry">
         <rect>
-         <x>0</x>
-         <y>10</y>
-         <width>425</width>
-         <height>61</height>
+         <x>9</x>
+         <y>9</y>
+         <width>440</width>
+         <height>42</height>
         </rect>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>440</width>
+         <height>42</height>
+        </size>
        </property>
        <property name="styleSheet">
         <string notr="true">#emptyKadsLabel {font-weight: bold; color: #454545;}</string>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Select some variables to see &lt;span style=&quot; font-style:italic;&quot;&gt;k&lt;/span&gt;-ad options here&lt;/p&gt;&lt;p&gt;(i.e. where &lt;span style=&quot; font-style:italic;&quot;&gt;k&lt;/span&gt; can be set to 2 (for dyads), 3 (for triads), or higher).&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;b&gt;&lt;big&gt;Select some variables to see &lt;i&gt;k&lt;/i&gt;-ad options here&lt;br&gt;
+(i.e. where &lt;i&gt;k&lt;/i&gt; can be set to 2 (for dyads), 3 (for triads), or higher).&lt;/big&gt;&lt;/b&gt;</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
