Increase timeout for busy operations to support thousands of queued operations (i.e., for variable groups with thousands of items).  Also, add some infrastructure to support automatic disabling of QListView updates for a short time when the backend action manager is hosed - but do not enable it, because it doesn't work well.  Also, change some GUI coloration.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
@@ -71,7 +71,7 @@
        </sizepolicy>
       </property>
       <property name="styleSheet">
-       <string notr="true">#scrollAreaWidgetContents {background-color: #E5F0FF;}</string>
+       <string notr="true">#scrollAreaWidgetContents {background-color: #AFD4F6;}</string>
       </property>
       <widget class="QLabel" name="emptyKadsLabel">
        <property name="geometry">
