--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariables.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariables.ui
@@ -64,7 +64,7 @@
      <item>
       <widget class="QCheckBox" name="checkBoxHideBars">
        <property name="text">
-        <string>Hide titles</string>
+        <string>Expand </string>
        </property>
       </widget>
      </item>
@@ -87,7 +87,6 @@
         <height>277</height>
        </rect>
       </property>
-      <zorder>label</zorder>
      </widget>
     </widget>
    </item>
