Rows of raw data with invalid date fields now are rejected at the row level only by NewGene.  Also, some small but valuable GUI text and formatting changes.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariables.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariables.ui
@@ -30,45 +30,50 @@
     <number>0</number>
    </property>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayoutHeader">
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>1</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="autoFillBackground">
-        <bool>false</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QLabel
+    <widget class="QFrame" name="frameVariableListHeader">
+     <property name="styleSheet">
+      <string notr="true">QFrame {border-bottom: 2px solid #333333;}</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayoutHeader">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QLabel
 {
 	background-color : #F4F2F0;
 	font-weight: bold;
 	font-size: 14px; padding-top: 2px;  padding-bottom: 2px;
 }</string>
-       </property>
-       <property name="text">
-        <string>Variables</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <property name="textInteractionFlags">
-        <set>Qt::NoTextInteraction</set>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="checkBoxHideBars">
-       <property name="text">
-        <string>Expand </string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+        </property>
+        <property name="text">
+         <string> Variables </string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::NoTextInteraction</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="checkBoxHideBars">
+        <property name="text">
+         <string>Expand current variable group to fill the entire pane </string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </item>
    <item>
     <widget class="QScrollArea" name="scrollArea">
@@ -84,7 +89,7 @@
         <x>0</x>
         <y>0</y>
         <width>400</width>
-        <height>277</height>
+        <height>275</height>
        </rect>
       </property>
      </widget>
