--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariables.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariables.ui
@@ -34,7 +34,7 @@
      <property name="styleSheet">
       <string notr="true">QFrame {border-bottom: 2px solid #333333;}</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayoutHeader">
+     <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
        <widget class="QLabel" name="label">
         <property name="sizePolicy">
@@ -89,7 +89,7 @@
         <x>0</x>
         <y>0</y>
         <width>400</width>
-        <height>275</height>
+        <height>236</height>
        </rect>
       </property>
      </widget>
