Tweaks so that the splash screen is always on top (for real), but does not cover up loading message boxes.  Tweaks so that when a new project is created, "missing model settings file" and "missing database" messages are not given, but when those files are missing when a project is opened, the error messages are given.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
@@ -99,6 +99,31 @@
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
+      <widget class="QLabel" name="noOutputProjectLabel">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>9</y>
+         <width>449</width>
+         <height>42</height>
+        </rect>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>440</width>
+         <height>42</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">#emptyKadsLabel {font-weight: bold; color: #454545;}</string>
+       </property>
+       <property name="text">
+        <string>&lt;b&gt;&lt;big&gt;Please select an output dataset&lt;/big&gt;&lt;/b&gt;</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
      </widget>
     </widget>
    </item>
